cpp version of roman to integer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,13 @@
     "editor.defaultFormatter": "golang.go",
     "editor.formatOnSave": true
   },
-  "go.formatFlags": ["-w"]
+  "go.formatFlags": [
+    "-w"
+  ],
+  "files.associations": {
+    "*.ejs": "html",
+    "*.pm": "perl",
+    "unordered_map": "cpp",
+    "map": "cpp"
+  }
 }
