Roman to integer cpp (#4)
* cpp version of roman to integer

* change settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "editor.defaultFormatter": "golang.go",
     "editor.formatOnSave": true
   },
-  "go.formatFlags": ["-w"]
+  "go.formatFlags": [
+    "-w"
+  ]
 }
