use leetcode.h at CI and local debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.30)
 
 project(tests)
 
-include_directories(/opt/homebrew/include)
+include_directories(include /opt/homebrew/include)
 link_directories(/opt/homebrew/lib)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -24,5 +24,7 @@ add_executable(run_tests
   src/069_sqrt_x.cc
   src/070_climbing_stairs.cc
 )
+
+add_definitions(-DNOT_LEETCODE)
 
 target_link_libraries(run_tests gtest gtest_main pthread)
