add [83] Remove Duplicates from Sorted List

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(run_tests
   src/067_add_binary.cc
   src/069_sqrt_x.cc
   src/070_climbing_stairs.cc
+  src/083_remove_duplicates_from_sorted_list.cc
 )
 
 add_definitions(-DNOT_LEETCODE)
