--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
+
     - uses: Bacondish2023/setup-googletest@v1
       with:
         tag: v1.14.0
 
-    - uses: actions/checkout@v4
-
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
 
-    - name: Make
-      working-directory: ${{github.workspace}}/build
-      run: make
-
     - name: Test
       working-directory: ${{github.workspace}}/build
-      run: ./run_tests
+      run: make && ./run_tests
