--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/ci.yml
       - src/**
       - CMakeLists.txt
 
@@ -16,16 +17,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install gtest manually
-      run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+    - uses: Bacondish2023/setup-googletest@v1
+      with:
+        tag: v1.14.0
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
 
-    - name: Make
-      working-directory: ${{github.workspace}}/build
-      run: make
-
     - name: Test
       working-directory: ${{github.workspace}}/build
-      run: ./run_tests
+      run: make && ./run_tests
