update test workflow

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,21 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "cmake",
+      "label": "test",
       "type": "shell",
-      "command": "cmake ..",
-      "options": {
-        "cwd": "${workspaceFolder}/build"
-      },
-      "problemMatcher": []
-    },
-    {
-      "label": "run_tests",
-      "type": "shell",
-      "command": "make && ./run_tests",
-      "options": {
-        "cwd": "${workspaceFolder}/build"
-      },
+      "command": "./test.sh",
       "problemMatcher": []
     }
   ]
