--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,5 @@ jobs:
       with:
         tag: v1.14.0
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
-
     - name: Test
-      working-directory: ${{github.workspace}}/build
-      run: make && ./run_tests
+      run: ./scripts/test.sh
