--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -20,14 +20,4 @@ jobs:
         run: sudo apt-get install clang-format
 
       - name: Run clang-format
-        run: clang-format ./src/*.cc -i
-
-      - name: Check for formatting changes
-        run: |
-          if [[ $(git status --porcelain) ]]; then
-            echo "Code is not formatted according to .clang-format. Please run clang-format."
-            git --no-pager diff
-            exit 1
-          else
-            echo "Code is properly formatted according to .clang-format."
-          fi
+        run: clang-format ./src/*.cc -n --Werror
