--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,8 @@ CMakeUserPresets.json
 build/
 
 # vscode
-.vscode/settings.json
+**/.vscode/*
+!**/.vscode/c_cpp_properties.example.json
+!**/.vscode/extensions.json
+!**/.vscode/settings.example.json
+!**/.vscode/tasks.json
