add [7] Reverse Integer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(run_tests
   src/003_longest_substring_without_repeating_characters.cc
   src/005_longest_palindromic_substring.cc
   src/006_zigzag_conversion.cc
+  src/007_reverse_integer.cc
 )
 
 add_definitions(-DNOT_LEETCODE)
