--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(run_tests
   src/006_zigzag_conversion.cc
   src/007_reverse_integer.cc
   src/008_string_to_integer_atoi.cc
+  src/011_container_with_most_water.cc
 )
 
 add_definitions(-DNOT_LEETCODE)
