--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(run_tests
   src/011_container_with_most_water.cc
   src/012_integer_to_roman.cc
   src/012_integer_to_roman2.cc
+  src/015_3_sum.cc
 )
 
 target_link_libraries(run_tests gtest gtest_main pthread)
